--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@
 .editInput{
     @apply w-[300px] md:w-[450px] h-10 md:h-14 text-xl md:text-2xl text-center mt-2 border-gray-500 border-2 rounded-xl
 }
+    .hoverScale{
+        @apply hover:scale-105 duration-300
+    }
 }
 
 * {
